<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dig_sand"
    tools:context=".DigSandActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Resources_Bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sand_collected_textview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SandCollectedTextView"/>

    </LinearLayout>
    <ImageView
        android:contentDescription="@string/sand_image_imageview_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sand_object"
        android:id="@+id/Sand_Object"
        android:layout_marginBottom="110dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="playAnim"/>

    <ImageView
        android:contentDescription="@string/sandplus_image_imageview_description"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:background="@drawable/sand_plus"
        android:alpha="0"
        android:id="@+id/Sand_Plus"
        android:layout_marginTop="57dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="76dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text"
        android:id="@+id/BackToHouseButton"
        android:onClick="BackToHouse"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>


</RelativeLayout>
