<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.ymbah.MainMenuActivity"
    android:id="@+id/MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_title_textview"
        android:textSize="50sp"
        android:id="@+id/MainMenuTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MainMenuButtonLayout"
        android:layout_below="@+id/MainMenuTitleTextView"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game_button_text"
            android:onClick="StartGame"
            android:id="@+id/StartGameButton"
            android:layout_centerHorizontal="true"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DifficultyNumberPicker"
            android:layout_below="@+id/PlayerSpinner"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_game_button_text"
            android:id="@+id/LoadGameButton"
            android:onClick="LoadGame"
            android:layout_below="@+id/StartGameButton"
            android:layout_centerHorizontal="true"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PlayerSpinner"
            android:layout_below="@+id/LoadGameButton">

        </Spinner>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_button_text"
        android:onClick="OpenOptions"
        android:id="@+id/MainMenuOptionsButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>